# humanoid-atlas

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  SEED-AGI.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  data-submission.md  feature.md
.github/workflows/: ci.yml
api/: _middleware.ts  company-chat.ts  compare.ts  export-graph.ts  graph-query.ts  investment-thesis.ts  likes.ts  scenario-parse.ts  scenario-summary.ts  smart-search.ts  views.ts
docs/: DATA_VISUALIZATION.md
public/: llms.txt  robots.txt  sitemap.xml
src/: App.css  App.tsx  main.tsx
src/components/: ApiDocs.tsx  Arena.tsx  DataBrokerage.tsx  DetailPanel.tsx  EquipmentPage.tsx  PLYViewer.tsx  ParquetChartViewer.tsx  SampleExplorer.tsx  SupplyChainGraph.tsx  TactileHand3D.tsx  TactileHandViewer.tsx
src/data/: companies.ts  funding.ts  index.ts  relationships.ts  types.ts  vlaModels.ts
src/hooks/: useCart.ts
src/i18n/: LocaleToggle.tsx  index.ts  ja-atlas-data.ts  ja-overrides.ts  locale.ts  slugKey.ts
src/lib/: brokerage-api.ts  sample-utils.test.ts  sample-utils.ts
tools/preview-generator/: README.md  pyproject.toml
tools/preview-generator/atlas_preview/: __init__.py  cli.py
